force-app/main/default/objects/DuplicateRecordItem/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set by before flow based on recordid</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Record Items</relationshipLabel>
    <relationshipName>Duplicate_Record_Items</relationshipName>
    <type>Lookup</type>
</CustomField>