force-app/main/default/objects/DuplicateRecordItem/fields/CWS_Lead__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>set by before flow for unconverted leads</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Duplicate Record Items</relationshipLabel>
    <relationshipName>Duplicate_Record_Items</relationshipName>
    <type>Lookup</type>
</CustomField>